// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Contextual Navigation renders correctly 1`] = `
<test>
  <nav
    class="ecl-contextual-navigation"
    data-ecl-auto-init="ContextualNavigation"
    data-ecl-contextual-navigation=""
  >
    <div
      class="ecl-contextual-navigation__label"
    >
      Label for contextual navigation
    </div>
    <ul
      class="ecl-contextual-navigation__list"
      data-ecl-contextual-navigation-list=""
    >
      <li
        class="ecl-contextual-navigation__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-contextual-navigation__link"
          href="/example"
        >
          Item 1
        </a>
      </li>
      <li
        class="ecl-contextual-navigation__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-contextual-navigation__link"
          href="/example"
        >
          Item 2
        </a>
      </li>
      <li
        class="ecl-contextual-navigation__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-contextual-navigation__link"
          href="/example"
        >
          Item 3
        </a>
      </li>
      <li
        class="ecl-contextual-navigation__item ecl-contextual-navigation__item--collapsed"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-contextual-navigation__link"
          href="/example"
        >
          Item 4
        </a>
      </li>
      <li
        class="ecl-contextual-navigation__item ecl-contextual-navigation__item--collapsed"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-contextual-navigation__link"
          href="/example"
        >
          Item 5
        </a>
      </li>
      <li
        class="ecl-contextual-navigation__item ecl-contextual-navigation__item--collapsed"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-contextual-navigation__link"
          href="/example"
        >
          Item 6
        </a>
      </li>
      <li
        class="ecl-contextual-navigation__item  ecl-contextual-navigation__item--more"
      >
        <button
          class="ecl-button ecl-button--ghost ecl-contextual-navigation__more"
          data-ecl-contextual-navigation-more="true"
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              More
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-icon--rotate-90 ecl-button__icon ecl-button__icon--after"
              data-ecl-icon=""
              focusable="false"
            >
              <use
                xlink:href="static/icons#ui--corner-arrow"
              />
            </svg>
          </span>
        </button>
      </li>
    </ul>
  </nav>
</test>
`;

exports[`EC - Contextual Navigation renders correctly with extra attributes 1`] = `
<test>
  <nav
    class="ecl-contextual-navigation"
    data-ecl-auto-init="ContextualNavigation"
    data-ecl-contextual-navigation=""
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-contextual-navigation__label"
    >
      Label for contextual navigation
    </div>
    <ul
      class="ecl-contextual-navigation__list"
      data-ecl-contextual-navigation-list=""
    >
      <li
        class="ecl-contextual-navigation__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-contextual-navigation__link"
          href="/example"
        >
          Item 1
        </a>
      </li>
      <li
        class="ecl-contextual-navigation__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-contextual-navigation__link"
          href="/example"
        >
          Item 2
        </a>
      </li>
      <li
        class="ecl-contextual-navigation__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-contextual-navigation__link"
          href="/example"
        >
          Item 3
        </a>
      </li>
      <li
        class="ecl-contextual-navigation__item ecl-contextual-navigation__item--collapsed"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-contextual-navigation__link"
          href="/example"
        >
          Item 4
        </a>
      </li>
      <li
        class="ecl-contextual-navigation__item ecl-contextual-navigation__item--collapsed"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-contextual-navigation__link"
          href="/example"
        >
          Item 5
        </a>
      </li>
      <li
        class="ecl-contextual-navigation__item ecl-contextual-navigation__item--collapsed"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-contextual-navigation__link"
          href="/example"
        >
          Item 6
        </a>
      </li>
      <li
        class="ecl-contextual-navigation__item  ecl-contextual-navigation__item--more"
      >
        <button
          class="ecl-button ecl-button--ghost ecl-contextual-navigation__more"
          data-ecl-contextual-navigation-more="true"
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              More
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-icon--rotate-90 ecl-button__icon ecl-button__icon--after"
              data-ecl-icon=""
              focusable="false"
            >
              <use
                xlink:href="static/icons#ui--corner-arrow"
              />
            </svg>
          </span>
        </button>
      </li>
    </ul>
  </nav>
</test>
`;

exports[`EC - Contextual Navigation renders correctly with extra class names 1`] = `
<test>
  <nav
    class="ecl-contextual-navigation custom-class custom-class--test"
    data-ecl-auto-init="ContextualNavigation"
    data-ecl-contextual-navigation=""
  >
    <div
      class="ecl-contextual-navigation__label"
    >
      Label for contextual navigation
    </div>
    <ul
      class="ecl-contextual-navigation__list"
      data-ecl-contextual-navigation-list=""
    >
      <li
        class="ecl-contextual-navigation__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-contextual-navigation__link"
          href="/example"
        >
          Item 1
        </a>
      </li>
      <li
        class="ecl-contextual-navigation__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-contextual-navigation__link"
          href="/example"
        >
          Item 2
        </a>
      </li>
      <li
        class="ecl-contextual-navigation__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-contextual-navigation__link"
          href="/example"
        >
          Item 3
        </a>
      </li>
      <li
        class="ecl-contextual-navigation__item ecl-contextual-navigation__item--collapsed"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-contextual-navigation__link"
          href="/example"
        >
          Item 4
        </a>
      </li>
      <li
        class="ecl-contextual-navigation__item ecl-contextual-navigation__item--collapsed"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-contextual-navigation__link"
          href="/example"
        >
          Item 5
        </a>
      </li>
      <li
        class="ecl-contextual-navigation__item ecl-contextual-navigation__item--collapsed"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-contextual-navigation__link"
          href="/example"
        >
          Item 6
        </a>
      </li>
      <li
        class="ecl-contextual-navigation__item  ecl-contextual-navigation__item--more"
      >
        <button
          class="ecl-button ecl-button--ghost ecl-contextual-navigation__more"
          data-ecl-contextual-navigation-more="true"
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              More
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-icon--rotate-90 ecl-button__icon ecl-button__icon--after"
              data-ecl-icon=""
              focusable="false"
            >
              <use
                xlink:href="static/icons#ui--corner-arrow"
              />
            </svg>
          </span>
        </button>
      </li>
    </ul>
  </nav>
</test>
`;
